--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-	<title>Start</title>
+	<title>Vine Market</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,14 +19,118 @@
 	<![endif]-->
 </head>
 <body>
-	<header class="ba-header">
-
-	</header>
-	<main role="main">
-
+	<main role="main" class="wrapper">
+		<h3 class="title">Vine Market</h3>
+		<div class="ba-grid ba-grid-nopad">
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_1.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Silver beet</h2>
+				<div class="ba-drink__price">$19.90</div>
+				<p class="ba-drink__text">Silver beet shallot wakame tomatillo salsify mung bean beetroot groundnut.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_2.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Wattle seed</h2>
+				<div class="ba-drink__price">$22.90</div>
+				<p class="ba-drink__text">Wattle seed bunya nuts spring onion okra garlic bitterleaf zucchini.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_3.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Kohlrabi bok</h2>
+				<div class="ba-drink__price">$5.90</div>
+				<p class="ba-drink__text">Kohlrabi bok choy broccoli rabe welsh onion spring onion tatsoi ricebean kombu chard.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_4.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Melon sierra</h2>
+				<div class="ba-drink__price">$12.90</div>
+				<p class="ba-drink__text">Melon sierra leone bologi carrot peanut salsify celery onion jícama summer purslane.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_5.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Celery carrot</h2>
+				<div class="ba-drink__price">$15.00</div>
+				<p class="ba-drink__text">Celery carrot napa cabbage wakame zucchini celery chard beetroot jícama sierra leone.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_6.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Catsear</h2>
+				<div class="ba-drink__price">$20.00</div>
+				<p class="ba-drink__text">Catsear cabbage tomato parsnip cucumber pea brussels sprout spring onion shallot swiss .</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_7.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Mung bean</h2>
+				<div class="ba-drink__price">$88.00</div>
+				<p class="ba-drink__text">Mung bean taro chicory spinach komatsuna fennel.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_8.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Epazote</h2>
+				<div class="ba-drink__price">$34.90</div>
+				<p class="ba-drink__text">Epazote soko chickpea radicchio rutabaga desert raisin wattle seed coriander water.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_9.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Tatsoi caulie</h2>
+				<div class="ba-drink__price">$21.50</div>
+				<p class="ba-drink__text">Tatsoi caulie broccoli rabe bush tomato fava bean beetroot epazote salad grape.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_10.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Endive okra</h2>
+				<div class="ba-drink__price">$18.50</div>
+				<p class="ba-drink__text">Endive okra chard desert raisin prairie turnip cucumber maize avocado.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_1.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Bush tomato</h2>
+				<div class="ba-drink__price">$9.00</div>
+				<p class="ba-drink__text">Bush tomato peanut shallot turnip prairie turnip gram desert raisin.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+			<div class="ba-width-1-3 ba-drink">
+				<a href="#" class="ba-drink__link">
+					<img src="img/bottle_2.png" class="ba-drink__img" alt="Silver beet">
+				</a>
+				<h2 class="ba-drink__title">Yarrow leek</h2>
+				<div class="ba-drink__price">$22.50</div>
+				<p class="ba-drink__text">Yarrow leek cabbage amaranth onion salsify caulie kale desert raisin prairie turnip garlic.</p>
+				<a href="#" class="ba-drink__btn-add">Add to cart</a>
+			</div>
+		</div>
 	</main>
-	<footer class="ba-footer">
-
-	</footer>
 </body>
 </html>
